# discord-bot-guide

./: CMakeLists.txt  runscript.sh
cmake/: dspg-config.cmake.in
include/commands/: CommandNames.h  docs.h
include/events/: on_ready.h  on_slashcommand.h
src/: main.cpp
src/commands/: CommandNames.cpp  docs.cpp
src/events/: on_ready.cpp  on_slashcommand.cpp
